organization index.html

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,7 +1,8 @@
+@charset "UTF-8";
 @import 'media';
 
 // Код для примера
-body {
+/*body {
     background: #ccc;
 }
 
@@ -37,5 +38,9 @@ body {
         color: #f00;
     }
 }
+*/
 
+.page {
+    background-color: bisque;
+}
 
