--- a/src/less/main.less
+++ b/src/less/main.less
@@ -3,8 +3,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 
 @color-text: #c00;
+@color-text-list: black;
 @color-background: #f2f2ed;
-@color-text: #c00;
 @color-border: rgb(217, 217, 212);
 @text-font-Roboto: 'Roboto', sans-serif;
 
@@ -134,6 +134,114 @@ body {
         background: white url(../img/search.png) no-repeat 97%;
         border: 1px solid @color-border;
     }
-
 }
 
+.content {
+    width: 90%;
+    background-color: white !important;
+
+    &____breadcrumbs {
+        display: flex;
+    }
+
+    &__product{
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.breadcrumbs {
+
+
+    &__list {
+        display: flex;
+        padding: 31px 0 0 21px;
+    }
+
+    &__item {
+        list-style-type: none;
+        padding-right: 5px;
+    }
+
+    &__link {
+        font-family: @text-font-Roboto;
+        font-size: 1em;
+        color: @color-text;
+    }
+}
+
+.product {
+    &__image {
+        width: 50.5%;
+        height: 100%;
+    }
+
+    &__tshirt {
+        width: 100%;
+        padding: 2px 0 0 22px;
+        box-sizing: border-box;
+    }
+
+    &__info {
+        width: 45%;
+    }
+
+    &__text {
+        font-family: @text-font-Roboto;
+    }
+
+    &__title {
+        margin: 0;
+        font-size: 2.2em;
+        font-weight: bold;
+        letter-spacing: 0.4px;
+        line-height: 36px;
+    }
+
+    &__description {
+        margin: 14px 0 0 2px;
+    }
+
+    &__price {
+        margin: 21px 0 0 -5px;
+        color: @color-text;
+        font-size: 2.4em;
+        font-weight: bold;
+        letter-spacing: -1px;
+    }
+
+    &__size {
+        font-family: @text-font-Roboto;
+        margin-top: 22px;
+    }
+}
+
+.size {
+
+    &__icon {
+        36px 0 0 2px;
+    }
+    
+    &__list{
+        display: flex;
+        padding: 0;
+    }
+
+    &__item {
+        list-style-type: none;
+    }
+
+    &__link {
+        text-decoration: none;
+        color: @color-text-list;
+        border: 1px solid black;
+        padding: 22px 27px;
+        margin-right: 8px;
+    }
+}
+
+
+
+.wish-list__heart {
+    width: 50px;
+}
