--- a/src/less/main.less
+++ b/src/less/main.less
@@ -219,9 +219,9 @@ body {
 .size {
 
     &__icon {
-        36px 0 0 2px;
+        padding: 36px 0 0 2px;
     }
-    
+
     &__list{
         display: flex;
         padding: 0;
