--- a/src/less/main.less
+++ b/src/less/main.less
@@ -323,7 +323,7 @@ body {
     border-top: 1px solid @color-border;
     border-bottom: 1px solid @color-border;
 
-    &__content {
+    &__servis {
         display:flex;
     }
 }
@@ -351,3 +351,27 @@ body {
 .instagram {
     width: 25px;
 }
+
+.service {
+    display: flex;
+
+    &__info {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__link {
+        display: flex;
+    }
+
+    &__list {
+        padding: 0;
+        margin: 0;
+    }
+
+    &__item {
+        list-style-type: none;
+        text-decoration: none;
+    }
+}
+
