--- a/src/less/main.less
+++ b/src/less/main.less
@@ -206,7 +206,6 @@ body {
 }
 
 .size {
-
     &__icon {
         margin: 13px 0 0 2px;
     }
@@ -355,14 +354,72 @@ body {
 .service {
     display: flex;
 
+    &:first-child {
+        width: 52%;
+    }
+
+    &:last-child {
+        width: 37%;
+        margin-top: 9px;
+    }
+
     &__info {
         display: flex;
         flex-direction: column;
+
+        &:first-child {
+            margin-left: 21px;
+        }
+
+        &:last-child {
+            margin-left: 72px;
+        }
     }
+
+    &__list {
+        padding: 0;
+        margin-top: 14px;
+
+        &:last-child {
+            padding-left: 51px;
+            padding-top: 1px;
+        }
+
+        &_last-col {
+            padding-left: 101px !important;
+        }
+    }
+
+    &__item {
+        list-style-type: none;
+        margin-top: 6px;
+    }
+
 
     &__link {
         display: flex;
+        color: @color-button-like-text;
+        text-decoration: none;
+        font-size: 0.95em;
+        word-spacing: -2px;
     }
+
+    &__text {
+        margin: 0;
+    }
+}
+
+.h-service {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin: 0 auto;
+    padding-top: 57px;
+}
+
+
+.bonus {
+    font-size: 0.95em;
 
     &__list {
         padding: 0;
@@ -375,3 +432,14 @@ body {
     }
 }
 
+.references {
+    &__list {
+        padding: 0;
+        margin: 0;
+    }
+
+    &__item {
+        list-style-type: none;
+        text-decoration: none;
+    }
+}
