--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import 'media';
+@import 'node_modules/normalize.css/normalize.css';
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 
 @color-text: #c00;
