--- a/src/index.ejs
+++ b/src/index.ejs
@@ -23,12 +23,21 @@
         <div class="navigation__content">
             <div class="navigation__link">
                 <ul class="navigation__list">
+                    <% const navigation = ['LISP', 'OCaml', 'JavaScript', 'Python', 'PHP']; %>
+                    <% navigation.forEach(function(item, index) { %>
+                    <li class ="navigation__item">
+                        <a href="#" class="navigation__link <% if(index == 0) { %>navigation__link_active<% } %>"><%= item; %></a>
+                    </li>
+                    <% }); %>
+                </ul>
+             <!--  for(let item of navigation) {-->
+             <!--   <ul class="navigation__list">
                     <li class="navigation__item"><a href="#" class="navigation__link">LISP</a>
                     <li class="navigation__item"><a href="#" class="navigation__link">OCaml</a>
                     <li class="navigation__item"><a href="#" class="navigation__link">JavaScript</a>
                     <li class="navigation__item"><a href="#" class="navigation__link">Python</a>
                     <li class="navigation__item"><a href="#" class="navigation__link">PHP</a>
-                </ul>
+                </ul>-->
             </div>
             <input class="navigation__search" name="search" placeholder="">
         </div>
@@ -141,8 +150,8 @@
         <div class="copyright">
             <p class="copyright__text">2005-2017 © 7h35h0p.ru — модный интернет-магазин одежды, обуви и аксессуаров.</p>
             <p class="copyright__text">Все права защищены. Доставка по всей России!</p>
+        </div>
     </div>
-
 </div>
 
 <script src="js/scripts.js"></script>
