--- a/src/less/main.less
+++ b/src/less/main.less
@@ -98,7 +98,6 @@ body {
         color: @color-text;
         letter-spacing: 0.8px;
         margin-right: 2px;
-
     }
 }
 
@@ -106,9 +105,10 @@ body {
     width: 100%;
     background-color: @color-background;
     border-top: 1px solid @color-border;
+    border-bottom: 1px solid @color-border;
 
     &__content {
-        height: 50px;
+        height: 49px;
         width: 90%;
         margin: 0 auto;
         display: flex;
@@ -118,7 +118,7 @@ body {
 
     &__list {
         display: flex;
-        padding: 2px 0 0 25px;
+        padding: 5px 0 0 24px;
     }
 
     &__item {
@@ -129,10 +129,16 @@ body {
     &__link {
         font-size: 1em;
         color: @color-text;
+
+        &_active {
+            color: @color-text-list;
+            font-weight: bold;
+            text-decoration: none;
+        }
     }
 
     &__search {
-        height: 35px;
+        height: 34px;
         width: 276px;
         margin-right: 3px;
         background: white url(../img/search.png) no-repeat 97%;
