--- a/src/less/main.less
+++ b/src/less/main.less
@@ -156,7 +156,7 @@ body {
 
     &__list {
         display: flex;
-        padding: 31px 0 0 21px;
+        padding: 33px 0 0 21px;
     }
 
     &__item {
@@ -167,6 +167,11 @@ body {
     &__link {
         font-size: 1em;
         color: @color-text;
+
+        &_active {
+            color: @color-text-list;
+            text-decoration: none;
+        }
     }
 }
 
