--- a/src/index.ejs
+++ b/src/index.ejs
@@ -61,11 +61,13 @@
                 <div class="product__size size">
                     <div class="size__text">Размер:</div>
                     <div class="size__icon">
-                        <ul class="size__list">
-                            <li class="size__item size__item_s ">S
-                            <li class="size__item size__item_m  size__item_active">M
-                            <li class="size__item size__item_l">L
-                        </ul>
+                        <% const size = ['S', 'M', 'L']; %>
+                        <% size.forEach(function(item, index) { %>
+
+                        <p class="size__item size__item_<%= item.toLowerCase(); %> <% if (index == 1) { %>size__item_active<% }%>">
+                            <input class="size__radio" name="size" type="radio" value="size__item_<%= item.toLowerCase(); %>" <% if (index == 1) { %>checked <% }%> ><%= item; %>
+                        </p>
+                        <% }); %>
                     </div>
                 </div>
                 <div class="product__color color">
