--- a/src/index.ejs
+++ b/src/index.ejs
@@ -12,11 +12,13 @@
 <div class="page">
 
     <div class = "header">
-        <span class="header__name">7h3 5h0p</span>
-        <div class="header__logo">
-            <img class="logo" src="img/oggetto_logo.svg" alt="Логотип">
-        </div>
-        <span class="header__phone">+7 (812) 2•12•85•06</span>
+
+        <div class="shop-logo"><span class="shop-logo__text">7h3 5h0p</span></div>
+        <div class="oggetto-logo"><img class="oggetto-logo__pic" src="img/oggetto_logo.svg" alt="Логотип"></div>
+        <div class="phone"><span class="phone__text">+7 (812) 2•12•85•06</span></div>
+        <!--=require img/oggetto_logo.svg-->
+        <!--
+        %-include(‘img/oggetto_logo.svg’)-%-->
     </div>
 
     <div class="navigation">
