--- a/src/index.ejs
+++ b/src/index.ejs
@@ -33,7 +33,9 @@
                     <% }); %>
                 </ul>
             </div>
-            <input class="navigation__search" name="search" placeholder="">
+            <form class="search" method="get" action="#">
+                <input class="navigation__search" name="search" placeholder="">
+            </form>
         </div>
     </div>
 
