update breadcrumbs ejs

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -48,7 +48,7 @@
                     <% if (index % 2 == 0) { %>
                     <a href="#" class="breadcrumbs__link <% if(index == 4) { %>breadcrumbs__link_active<% } %>"><%= item; %></a>
                     <% } else {%>
-                    <span class="breadcrumbs__link_separator">/</span>
+                    <span class="breadcrumbs__separator">/</span>
                     <% } %>
                 </li>
                 <% }); %>
