update product-info ejs

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -182,10 +182,10 @@ body {
         height: 100%;
         padding: 2px 0 0 22px;
     }
+}
 
-    &__info {
-        width: 45%;
-    }
+.product-info {
+    width: 45%;
 
     &__title {
         margin: 0;
