--- a/src/index.ejs
+++ b/src/index.ejs
@@ -57,13 +57,13 @@
 
         <div class="product">
             <img class="product__pic" src="img/tshirt_white.jpg" alt="Белая футболка">
-            <div class="product__info">
-                <div class="product__text">
-                    <h2 class="product__title">Футболка Alien technology</h2>
-                    <p class="product__description">Состав: 100% хлопок, динамическая типизация, польская нотация. Производство: Россия.</p>
-                    <div class="product__price">1500₽</div>
+            <div class="product-info">
+                <div class="product-info__text">
+                    <h2 class="product-info__title">Футболка Alien technology</h2>
+                    <p class="product-info__description">Состав: 100% хлопок, динамическая типизация, польская нотация. Производство: Россия.</p>
+                    <div class="product-info__price">1500₽</div>
                 </div>
-                <div class="product__size size">
+                <div class="product-info__size size">
                     <div class="size__text">Размер:</div>
                     <div class="size__icon">
                         <% const size = ['S', 'M', 'L']; %>
@@ -75,7 +75,7 @@
                         <% }); %>
                     </div>
                 </div>
-                <div class="product__color color">
+                <div class="product-info__color color">
                     <div class="color__text">Цвет:</div>
 
                     <div class="color__icon">
@@ -95,9 +95,9 @@
                         <div class="wish-list__item"><a href="#" class="wish-list__link">Отложить на потом</a></div>
                     </div>
                 </div>
-                </div>
             </div>
         </div>
+    </div>
 
     <div class="footer">
             <div class="footer__service h-service">
