update footer ejs

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -100,10 +100,10 @@
     </div>
 
     <div class="footer">
-            <div class="footer__service h-service">
+            <div class="footer__service">
                 <div class="service">
                     <div class="service__info">
-                        <h4 class="service__text">Сервис и поддержка</h4>
+                        <h4 class="service__title">Сервис и поддержка</h4>
                         <div class="service__link">
                             <ul class="service__list">
                                 <% const service1 = ['Как сделать заказ', 'Возврат товара', 'Публичная оферта', 'Доставка']; %>
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <div class="service__info">
-                        <h4 class="service__text">О компании</h4>
+                        <h4 class="service__title">О компании</h4>
                         <div class="service__link">
                             <ul class="service__list">
                                 <% const service3 = ['О нас', 'Контакты', 'Вакансии', 'Партнерам']; %>
