--- a/src/less/main.less
+++ b/src/less/main.less
@@ -314,17 +314,13 @@ body {
     background-color: @color-background;
     border-top: 1px solid @color-border;
 
-    &__servis {
+    &__service {
+        width: 90%;
         display: flex;
+        justify-content: space-between;
+        margin: 0 auto;
+        padding-bottom: 42px;
     }
-}
-
-.h-service {
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 42px;
-    margin: 0 auto;
-    width: 90%;
 }
 
 .service {
@@ -381,7 +377,7 @@ body {
         word-spacing: -2px;
     }
 
-    &__text {
+    &__title {
         margin: 0;
     }
 }
