--- a/src/less/main.less
+++ b/src/less/main.less
@@ -327,7 +327,7 @@ body {
     display: flex;
 
     &:first-child {
-        width: 52%;
+        width: 54%;
         padding-top: 58px;
     }
 
@@ -345,16 +345,16 @@ body {
         }
 
         &:last-child {
-            margin-left: 73px;
+            margin-left: 74px;
         }
     }
 
     &__list {
         padding: 0;
-        margin-top: 13px;
+        margin-top: 15px;
 
         &:last-child {
-            padding-left: 51px;
+            padding-left: 52px;
             padding-top: 1px;
         }
 
@@ -365,16 +365,18 @@ body {
 
     &__item {
         list-style-type: none;
-        margin-top: 8px;
+        margin-top: 6px;
     }
 
+    &__links {
+        display: flex;
+    }
 
     &__link {
-        display: flex;
         color: @color-text-list;
         text-decoration: none;
         font-size: .95em;
-        word-spacing: -2px;
+        letter-spacing: -0.6px;
     }
 
     &__title {
@@ -416,7 +418,7 @@ body {
     }
 }
 
-.references {
+.social-links {
     margin-left: 29%;
     margin-top: 56px;
 
